<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loadcell_controller</name>
  <version>0.0.0</version>
  <description>Loadcell Controller node that consumes ZMQ msgpack stream and publishes ROS2 topics</description>
  <maintainer email="nohjun.dev@watanow.com">wata</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- CMake에서 pkg-config를 사용 -->
  <build_depend>pkg-config</build_depend>

  <depend>rclcpp</depend>
  <depend>sensor_driver_interface</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
