<?xml version="1.0"?>
<package format="3">
  <name>loadcell_driver</name>
  <version>0.1.0</version>
  <description>
    Load cell (weight sensor) driver node based on RS485 loadcell communication library.
  </description>
  <maintainer email="nohjun.dev@watanow.com">wata</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_driver_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
